<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bgWelcome"
        android:layout_width="match_parent"
        android:layout_height="318dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/logoWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logowarmindone"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-140dp"
        android:padding="50dp"
        app:cardBackgroundColor="@color/bg"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoWelcome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/selamatdatang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/selamat_datang"
                android:textColor="@color/text"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/silahkanlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/silahkan_login"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="normal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/secondary"
                app:cornerRadius="16px" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegisterWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Register"
                android:textColor="@color/secondary"

                android:textSize="18sp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="16px"
                app:strokeColor="@color/secondary"
                app:strokeWidth="2dp" />

            <TextView
                android:id="@+id/txtAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="apakah Anda seorang Admin?"
                android:textColor="@color/text"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>